test/classes/initializers/phase1/methodCallInOmittedInit.good
methodCallInOmittedInit.chpl:2: error: cannot call a method during phase 1 of initialization